[package]
name = "no-proxy"
version = "0.3.2"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"
description = "Parses and evaluate no_proxy configuration"
license = "MIT"
repository = "https://github.com/jdrouet/no-proxy"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serialize"]
serialize = ["serde"]
graphql = ["async-graphql"]

[dependencies]
async-graphql = { version = "^5.0", optional = true }
cidr-utils = "^0.5"
serde = { version = "^1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "^1.0"
